--- a/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
+++ b/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   dio: ^5.5.0+1
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
