--- a/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
+++ b/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   dio: ^5.5.0+1
   url_launcher:
 
+  #Cache
+  shared_preferences:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
