--- a/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
+++ b/Veli_Bacik/flutter_learn_full_course/flutter_full_learn/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   #Cache
   shared_preferences:
 
+  #States
+  provider:
+
+  #Animation
+  lottie: ^3.1.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
