--- a/flutter_bloc/flutter_bloc_learn/pubspec.yaml
+++ b/flutter_bloc/flutter_bloc_learn/pubspec.yaml
@@ -31,12 +31,17 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc:
-  equatable:
+  equatable: ^2.0.5
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  dio: ^5.6.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.11
+  json_annotation: ^4.9.0
+  bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
