--- a/bloc_clean_architecture/bloc_clean_architecture_login_api/pubspec.yaml
+++ b/bloc_clean_architecture/bloc_clean_architecture_login_api/pubspec.yaml
@@ -30,6 +30,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.3
+  http: ^1.2.1
+  flutter_bloc: ^8.1.4
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  fluttertoast: ^8.2.4
+  cached_network_image: ^3.3.1
+  another_flushbar: ^1.12.30
+  equatable: ^2.0.5
+  flutter_secure_storage: ^9.0.0
+  freezed: ^2.4.7
+  google_fonts: ^6.2.0
+  build_runner: ^2.4.8
+  json_serializable: ^6.7.1
 
 
   # The following adds the Cupertino Icons font to your application.
