--- a/Veli_Bacik/flutter_architecture/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  mobx: ^2.4.0
+  flutter_mobx: ^2.2.1+1
+  build_runner: ^2.4.13
+  mobx_codegen: ^2.6.2
 
 dev_dependencies:
   flutter_test:
