--- a/Veli_Bacik/flutter_architecture/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   build_runner: ^2.4.13
   mobx_codegen: ^2.6.2
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - asset/lang/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
