--- a/Veli_Bacik/flutter_architecture/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   build_runner: ^2.4.13
   mobx_codegen: ^2.6.2
   easy_localization: ^3.0.7
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
