--- a/Veli_Bacik/flutter_architecture/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   mobx_codegen: ^2.6.2
   easy_localization: ^3.0.7
   provider: ^6.1.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
