--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   json_annotation: ^4.9.0
   envied: ^0.5.4+1
+  easy_localization: ^3.0.7
 
   ui_widgets:
     path: module/ui_widgets
@@ -53,7 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/app/arch_app.png
-  #   - images/a_dot_ham.jpeg
+    - assets/translations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
