--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -11,14 +11,24 @@ dependencies:
   flutter:
     sdk: flutter
 
-  #Core Dependencies
-  kartal: ^4.1.0
-  vexana: ^5.0.1
+  # Core
   equatable: ^2.0.5
+
+  # Network Dependencies
+  vexana: ^5.0.1
+
+  # State
   flutter_riverpod: ^2.6.1
-  json_annotation: ^4.9.0
+  
+
+  # Config
   envied: ^0.5.4+1
+  json_annotation: ^4.9.0
   easy_localization: ^3.0.7
+
+  # Utility
+  logger: ^2.4.0
+  kartal: ^4.1.0
 
   ui_widgets:
     path: module/ui_widgets
@@ -34,6 +44,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   flutter_gen_runner: ^5.8.0
   flutter_launcher_icons: ^0.14.1
+  envied_generator: ^0.5.4+1
 
 flutter_launcher_icons:
   android: "launcher_icon"
