--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Utility
   logger: ^2.4.0
   kartal: ^4.1.0
+  google_fonts: ^6.2.1
 
   ui_widgets:
     path: module/ui_widgets
