--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -22,8 +22,8 @@ dependencies:
   
 
   # Config
-  envied: ^0.5.4+1
-  json_annotation: ^4.9.0
+  #envied: ^0.5.4+1
+  #json_annotation: ^4.9.0
   easy_localization: ^3.0.7
 
   # Utility
@@ -33,6 +33,9 @@ dependencies:
 
   ui_widgets:
     path: module/ui_widgets
+  
+  gen:
+    path: module/gen
 
 
   cupertino_icons: ^1.0.8
@@ -42,10 +45,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   very_good_analysis: ^6.0.0
-  build_runner: ^2.4.13
-  flutter_gen_runner: ^5.8.0
+  #build_runner: ^2.4.13
+  #flutter_gen_runner: ^5.8.0
   flutter_launcher_icons: ^0.14.1
-  envied_generator: ^0.5.4+1
+  #envied_generator: ^0.5.4+1
 
 flutter_launcher_icons:
   android: "launcher_icon"
@@ -54,10 +57,10 @@ flutter_launcher_icons:
   min_sdk_android: 21
   remove_alpha_ios: true
 
-flutter_gen:
-  output: lib/product/generated/
-  integrations:
-    lottie: true
+#flutter_gen:
+  #output: lib/product/generated/
+  #integrations:
+    #lottie: true
 
 flutter:
 
