--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -31,11 +31,17 @@ dependencies:
   kartal: ^4.1.0
   google_fonts: ^6.2.1
 
+  # Navigation
+  auto_route: ^7.8.4
+
   ui_widgets:
     path: module/ui_widgets
   
+  # Modules
   gen:
     path: module/gen
+  common:
+    path: module/common
 
 
   cupertino_icons: ^1.0.8
@@ -45,9 +51,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^4.0.0
   very_good_analysis: ^6.0.0
-  #build_runner: ^2.4.13
+  build_runner: ^2.4.13
   #flutter_gen_runner: ^5.8.0
   flutter_launcher_icons: ^0.14.1
+  auto_route_generator: ^7.3.2
   #envied_generator: ^0.5.4+1
 
 flutter_launcher_icons:
