--- a/Veli_Bacik/flutter_architecture_v2/module/gen/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/module/gen/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.5
   lottie: ^3.1.3
   flutter_svg: ^2.0.14
+  vexana: ^5.0.1
 
 dev_dependencies:
   flutter_test:
