--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -43,7 +43,8 @@ dependencies:
     path: module/gen
   common:
     path: module/common
-
+  core:
+    path: module/core
 
   cupertino_icons: ^1.0.8
 
