--- a/Veli_Bacik/flutter_architecture_v2/module/core/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/module/core/pubspec.yaml
@@ -1,7 +1,7 @@
 name: core
 description: "A new Flutter package project."
 version: 0.0.1
-homepage:
+homepage: none
 
 environment:
   sdk: ^3.5.3
@@ -10,11 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^4.0.0-dev.2
+  isar_flutter_libs: ^4.0.0-dev.13
+  path_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
+  very_good_analysis: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
