--- a/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
+++ b/Veli_Bacik/flutter_architecture_v2/pubspec.yaml
@@ -58,6 +58,8 @@ dev_dependencies:
   flutter_launcher_icons: ^0.14.1
   auto_route_generator: ^7.3.2
   #envied_generator: ^0.5.4+1
+  mockito: ^5.4.4
+  bloc_test: ^9.1.7
 
 flutter_launcher_icons:
   android: "launcher_icon"
